Update index.html text changed

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
     yesBtn.addEventListener("click", () => {
       const randomMsg = messages[Math.floor(Math.random() * messages.length)];
       const randomCountry = getRandomCountry();
-      msg.innerHTML = `${randomMsg} (let’s go to ${randomCountry} someday 🌍💕)`;
+      msg.innerHTML = `${randomMsg} (baby we should go to ${randomCountry} someday 🌍💕)`;
     });
     noBtn.addEventListener("click", () => {
       msg.innerHTML = "Bruh 😒 (but I love you anyway 💖)";
