--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       display: none;
     }
 
-    /* Lock message (hidden by default) */
+    /* Lock message with fade toggle */
     #lockMessage {
       position: absolute;
       top: 50%;
@@ -198,8 +198,14 @@
       color: #d81b60;
       text-shadow: 0 0 8px #ff80ab;
       box-shadow: 0 0 20px #ff66b2, 0 0 30px #ffb6c1;
-      display: none;
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 0.6s ease;
       z-index: 2000;
+    }
+    #lockMessage.show {
+      opacity: 1;
+      pointer-events: auto;
     }
 
     /* Emoji controls */
@@ -272,7 +278,7 @@
     My forever, this I know. 💖
   </div>
 
-  <!-- Lock Message (hidden by default) -->
+  <!-- Lock Message (hidden by default, fades in/out) -->
   <div id="lockMessage">🔒 You have my heart forever 💖</div>
 
   <!-- Emoji controls -->
@@ -442,9 +448,10 @@
       document.querySelectorAll(".star").forEach(star => star.remove());
     });
 
+    /* Lock emoji toggle fade */
     const lockMessage = document.getElementById("lockMessage");
     document.getElementById("lockEmoji").addEventListener("click", () => {
-      lockMessage.style.display = "block";
+      lockMessage.classList.toggle("show");
     });
 
     document.getElementById("globeEmoji").addEventListener("click", () => {
